Fix word wrap for firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,7 @@ a {
 
 a {
   overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 h1,
